# gauss-py

./: .coverage  .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: cookbook.md
examples/: 01_basic_agent.py  02_tools_and_planning.py  03_team_coordination.py  04_mcp_server.py  05_memory_context.py  06_full_pipeline.py  07_a2a_client.py  08_graph_pipeline.py  09_workflow.py  10_network_delegation.py  11_tool_registry.py  12_structured_output.py  13_dx_utilities.py  14_all_providers.py  15_reasoning.py  README.md
python/gauss/: __init__.py  _native.pyi  _types.py  _utils.py  a2a.py  agent.py  approval.py  base.py  batch.py  checkpoint.py  code_execution.py  config.py  control_plane.py  decorators.py  document_loader.py  errors.py  eval.py  graph.py  guardrail.py  mcp.py  mcp_client.py  memory.py  middleware.py  models.py  network.py  pipeline.py  plugin.py  policy_gate.py  protocols.py  resilience.py  retry.py  routing_policy.py  spec.py  stream.py  structured.py  team.py  telemetry.py  template.py  text_splitter.py  tokens.py  (+5 more)
python/gauss/libgauss_py.dylib.dSYM/Contents/: Info.plist
tests/: test_a2a.py  test_async.py  test_control_plane.py  test_coverage_boost.py  test_decorators.py  test_e2e.py  test_e2e_control_plane.py  test_edge_cases.py  test_errors.py  test_integration_glue.py  test_mcp.py  test_policy_gate.py  test_rag.py  test_sdk.py  test_spec.py  test_tool_registry.py
tests/e2e/: test_gpt5.py  test_mcp_a2a.py  test_openrouter_advanced.py  test_providers.py  test_team_orchestration.py  test_tool_features.py
